styles/landingPage.module.scss
@import "./styles/variables";

.scrollHelper {
  position: absolute;
  top: -150px;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main {
  margin-top: 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.lead {
  &__text {
    text-align: center;
  }
  &__title {
    font-size: 3rem;
    font-weight: 800;
  }
  &__content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    text-align: left;
    gap: 20px;
    line-height: 1.5rem;
  }
  &__bookingBtn {
    text-align: center;
    width: 200px;
    color: #fff;
    font-size: 18px;
    padding: 20px;
    border-radius: 20px;
    background-color: #000;
    transition: all 100ms linear;
    &:hover {
      box-shadow: 3px 3px 10px #000;
    }
    & > p {
      line-height: 15px;
    }
  }
}

.contact {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-top: 50px;
  font-size: 1.2rem;
  text-align: center;

  &__tel {
    &_list {
      list-style: none;
      text-align: left;
      display: flex;
      flex-direction: column;
      gap: 35px;

      &Item {
        display: flex;
        align-items: center;
        gap: 30px;

        & > a {
          // text-decoration: underline;
          font-weight: bold;
          &:hover {
            color: $font-primary-hover;
          }
          &:active {
            color: $font-primary-active;
          }
        }
      }
    }
  }

  &__social {
    & > .contact__column_content {
      display: flex;
      align-items: center;
      justify-content: space-evenly;
      padding-top: 30px;
      border-right: 1px solid #000;
      border-left: 1px solid #000;
    }
  }

  &__address {
    & > .contact__column_content {
      padding-top: 30px;
      display: flex;
      align-items: center;
      gap: 30px;
      margin-left: 75px;
    }
  }

  &__column_title {
    font-size: 1.3rem;
    line-height: 28px;
    font-weight: bold;
  }

  &__column_content {
    font-size: 1rem;
    height: 100px;
    text-align: left;
    padding: 15px;
  }
}

.classes__container {
  width: 100%;
  margin: 0 auto;
  position: relative;
  margin: 60px 0 20px 0;
}

.classes {
  margin-top: 20px;
  width: 100%;
  display: grid;
  grid-template-columns: 1.5fr 3fr;
  gap: 22px;
  height: 85vh;

  &__selection {
    border-radius: 20px;
    padding: 30px;
    background-color: $content-background;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: left;
    text-align: left;

    &Btn {
      line-height: 38px;
      font-size: 24px;
      font-weight: 500;
      text-align: left;
      border-radius: 10px;
      padding: 10px;
      transition: background-color 100ms linear;

      &:hover {
        cursor: pointer;
        background-color: #fff;
      }

      &_isActive {
        background-color: #fff;
      }
    }
  }

  &__content {
    border-radius: 20px;
    background-color: $content-background;
  }
}

@media (max-width: 599px) {
  .lead {
    &__text {
      text-align: center;
    }
    &__title {
      font-size: 2.2rem;
    }
    &__content {
      display: grid;
      grid-template-columns: 100%;
      grid-template-rows: repeat(2, 1fr);
      text-align: left;
      gap: 20px;
      line-height: 1.5rem;
    }
    &__bookingBtn {
      margin: 30px 0;
      text-align: center;
      width: 200px;
      color: #fff;
      font-size: 18px;
      padding: 20px;
      border-radius: 20px;
      background-color: #000;
      transition: all 100ms linear;
      &:hover {
        box-shadow: 3px 3px 10px #000;
      }
      & > p {
        line-height: 15px;
      }
    }
  }

  .contact {
    display: flex;
    flex-direction: column;
    justify-items: center;
    gap: 20px;
    &__tel {
      & > .contact__column_content {
        margin-bottom: 35px;
      }
    }

    &__social {
      & > .contact__column_content {
        border-right: none;
        border-left: none;
      }
    }

    &__column_title {
      font-size: 1.2rem;
      line-height: 20px;
      font-weight: bold;
    }

    &__column_content {
      font-size: 1rem;
    }
  }
}

